--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,173 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+		<title>
+			Pacific Education Data Visualization | Children's Learning Proficiency in Pacific Islands
+		</title>
+		<meta
+			name="title"
+			content="Pacific Education Data Visualization | Children's Learning Proficiency in Pacific Islands"
+		/>
+		<meta
+			name="description"
+			content="Interactive data visualization showing the proportion of children and young people achieving minimum proficiency levels in reading and mathematics across Pacific Island nations. Created for the Pacific DataViz Challenge."
+		/>
+		<meta
+			name="keywords"
+			content="Pacific Islands education, children proficiency, reading skills, mathematics skills, data visualization, Pacific DataViz Challenge, educational statistics, Pacific region, learning outcomes, academic achievement"
+		/>
+		<meta name="author" content="Pacific DataViz Challenge Participant" />
+		<meta name="robots" content="index, follow" />
+		<meta name="language" content="English" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://pacificeducation.space/" />
+		<meta
+			property="og:title"
+			content="Pacific Education Data Visualization | Children's Learning Proficiency"
+		/>
+		<meta
+			property="og:description"
+			content="Explore interactive data on reading and mathematics proficiency levels among children and young people across Pacific Island nations. Educational insights from the Pacific DataViz Challenge."
+		/>
+		<meta property="og:site_name" content="Pacific Education DataViz" />
+		<meta property="og:locale" content="en_US" />
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:url" content="https://pacificeducation.space/" />
+		<meta
+			property="twitter:title"
+			content="Pacific Education Data Visualization | Children's Learning Proficiency"
+		/>
+		<meta
+			property="twitter:description"
+			content="Interactive visualization of reading & mathematics proficiency among Pacific Island children. Pacific DataViz Challenge submission."
+		/>
+		<meta property="twitter:creator" content="@yourtwitterhandle" />
+
+		<!-- Favicon -->
+		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+
+		<!-- Canonical URL -->
+		<link rel="canonical" href="https://pacificeducation.space/" />
+
+		<!-- Additional SEO Meta Tags -->
+		<meta name="theme-color" content="#0066cc" />
+		<meta name="msapplication-TileColor" content="#0066cc" />
+		<meta name="application-name" content="Pacific Education DataViz" />
+
+		<!-- Structured Data - JSON-LD -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebApplication",
+				"name": "Pacific Education Data Visualization",
+				"description": "Interactive data visualization showing the proportion of children and young people achieving minimum proficiency levels in reading and mathematics across Pacific Island nations",
+				"url": "https://pacificeducation.space/",
+				"applicationCategory": "EducationalApplication",
+				"operatingSystem": "Web Browser",
+				"offers": {
+					"@type": "Offer",
+					"price": "0",
+					"priceCurrency": "USD"
+				},
+				"creator": {
+					"@type": "Organization",
+					"name": "Pacific DataViz Challenge"
+				},
+				"about": [
+					{
+						"@type": "Thing",
+						"name": "Pacific Islands Education"
+					},
+					{
+						"@type": "Thing",
+						"name": "Educational Statistics"
+					},
+					{
+						"@type": "Thing",
+						"name": "Data Visualization"
+					}
+				],
+				"keywords": "Pacific Islands, education, children proficiency, reading, mathematics, data visualization",
+				"inLanguage": "en-US",
+				"isAccessibleForFree": true,
+				"learningResourceType": "Interactive Resource",
+				"educationalLevel": "Research",
+				"educationalUse": "Analysis"
+			}
+		</script>
+
+		s
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Dataset",
+				"name": "Pacific Islands Children's Educational Proficiency Data",
+				"description": "Dataset showing the proportion of children and young people achieving minimum proficiency levels in reading and mathematics across Pacific Island nations",
+				"keywords": "Pacific Islands, education statistics, reading proficiency, mathematics proficiency, children learning outcomes",
+				"creator": {
+					"@type": "Organization",
+					"name": "Pacific DataViz Challenge"
+				},
+				"spatialCoverage": "Pacific Islands",
+				"temporalCoverage": "2025",
+				"license": "https://creativecommons.org/licenses/by/4.0/",
+				"distribution": {
+					"@type": "DataDownload",
+					"encodingFormat": "application/json",
+					"contentUrl": "https://pacificeducation.space/data/pacific-education-data.json"
+				}
+			}
+		</script>
+
+		<!-- Preconnect to external domains for performance -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+		<style>
+			.preview-image {
+				display: none;
+			}
+
+			body {
+				font-display: swap;
+			}
+		</style>
+
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+
+		<!-- Schema.org markup for breadcrumbs (if applicable) -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "BreadcrumbList",
+				"itemListElement": [
+					{
+						"@type": "ListItem",
+						"position": 1,
+						"name": "Home",
+						"item": "https://pacificeducation.space/"
+					},
+					{
+						"@type": "ListItem",
+						"position": 2,
+						"name": "Pacific Education Visualization",
+						"item": "https://pacificeducation.space/"
+					}
+				]
+			}
+		</script>
 	</body>
 </html>
