Add LinkedIn meta tags and fix HTML formatting

--- a/src/app.html
+++ b/src/app.html
@@ -48,10 +48,22 @@
 			property="twitter:description"
 			content="Interactive visualization of reading & mathematics proficiency among Pacific Island children. Pacific DataViz Challenge submission."
 		/>
-		<meta property="twitter:creator" content="@yourtwitterhandle" />
+
+		<!-- LinkedIn -->
+		<meta property="linkedin:owner" content="" />
+		<meta
+			name="linkedin:title"
+			content="Pacific Education Data Visualization | Children's Learning Proficiency"
+		/>
+		<meta
+			name="linkedin:description"
+			content="Interactive data visualization showing educational proficiency levels across Pacific Island nations. Explore reading and mathematics achievement data from the Pacific DataViz Challenge."
+		/>
+		<meta name="linkedin:url" content="https://pacificeducation.space/" />
+		<meta name="linkedin:site" content="Pacific Education DataViz" />
 
 		<!-- Favicon -->
-		<link rel="icon" href="turtle.jpg" type="image" />
+		<link rel="icon" href="turtle.jpg" type="image/jpeg" />
 
 		<!-- Canonical URL -->
 		<link rel="canonical" href="https://pacificeducation.space/" />
@@ -103,7 +115,7 @@
 			}
 		</script>
 
-		s
+		<!-- Additional Structured Data for Dataset -->
 		<script type="application/ld+json">
 			{
 				"@context": "https://schema.org",
